# python-project-template

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  main.yaml  schedules.yaml
