[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.flake8]
max-line-length = 100

[tool.mypy]
python_version = 3.9
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
scripts_are_modules = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["KDH <ehdgua01@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.4.2"
mypy = "^0.782"
pre-commit = "^2.7.1"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
