[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
python_version = 3.10
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
scripts_are_modules = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["KDH <ehdgua01@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
